// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gel Close-Up Film Centre retrieve and find events 1`] = `[]`;

exports[`gel Rio Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://riocinema.org.uk/Rio.dll/WhatsOn?f=2652932",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789839000000,
      },
    ],
    "showingId": "gel.now-766",
    "title": "HAKEEM (+ Q&A and Acoustic Set)",
    "url": "https://gel.now/events/766",
  },
]
`;

exports[`gel The Horse Hospital retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://gel.now/events/852",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788028200000,
      },
    ],
    "showingId": "gel.now-852",
    "title": "Threshold Houseboys Choir: Form Grows Rampant",
    "url": "https://gel.now/events/852",
  },
]
`;
